test/files/neg/early-type-defs.scala
object Test extends { type A1 = Int } with App
