test/files/neg/early-type-defs.check
early-type-defs.scala:1: error: early type members are unsupported: move them to the regular body; the semantics are the same
object Test extends { type A1 = Int } with App
                           ^
one error found
